Added improvements api
